--- a/about/index.html
+++ b/about/index.html
@@ -5,4 +5,4 @@ description: ""
 ---
 {% include JB/setup %}
 
-Testing about/index.html
+Our goal is to bring a handmade beautiful invitation cards to the masses by working with talented local designers./index.html
