--- a/about/index.html
+++ b/about/index.html
@@ -5,4 +5,4 @@ description: ""
 ---
 {% include JB/setup %}
 
-Our goal is to bring handmade beautiful invitation cards to the masses by working with talented local designers./index.html
+Bliss Invite was founded on the premise that we don’t have to completely leave the old behind to make way for the new. We asked ourselves can we marry the old and the new and make it possible to easily buy boutique-quality invitations, crafted by local designers passionate about their craft?/index.html
