--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,9 @@ description: ""
 ---
 {% include JB/setup %}
 
-Bliss Invite was founded on the premise that we don’t have to completely leave the old behind to make way for the new. We asked ourselves can we marry the old and the new and make it possible to easily buy boutique-quality invitations, crafted by local designers passionate about their craft?
+Bliss Invite was founded on the premise that we don’t have to completely leave the old behind to make way for the new. 
+
+We asked ourselves can we marry the old and the new and make it possible to easily buy boutique-quality invitations, crafted by local designers passionate about their craft?
 
 As Engineers and Designers, we love to build and create things with our hands and appreciate the mechanics of machines, and interestingly we found all of those things we love in card making. We love the classic print machinerys from the 1800s and the loud roaring sound of the printing presses. Our print designers feel a tremendous amount of pride working their craft. We love the lost art of calligraphy the days where hand pressed correspondence was the official form of communication. So we said to ourselves, how do we marry the old and the new. How do we keep the art of card making,calligraphy printing and design alive in this age of emails and tweets ?
 
